# strong-wind-warning-app

./: .coveragerc  README.md  Wind_Data_EDA.ipynb  pyproject.toml
.github/workflows/: on-push.yaml
strong_wind_warning_app/: config.py  thresholds.py
tests/: test_config.py  test_thresholds.py
