[tool.poetry]
name = "strong-wind-warning-app"
version = "0.1.0"
description = ""
authors = ["Kelvin Ducray <kelvin.ducray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
requests = "^2.26.0"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.9.3"
flake8 = "^4.0.1"
bandit = "^1.7.0"
safety = "^1.10.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
